fix: focus of buttons + focus of inputs + contrast of buttons (#915)
* fix: focus of buttons + focus of inputs + contrast of buttons

* chore: release.md info

--- a/src/theme/ItaliaTheme/_common.scss
+++ b/src/theme/ItaliaTheme/_common.scss
@@ -10,8 +10,10 @@
       outline: 2px solid $outer-focus-outline !important;
       outline-offset: 2px;
 
-      border: none !important;
       box-shadow: 0 0 0 2px $inner-focus-shadow !important;
+
+      // adds additional internal black border to buttons
+      border: 2px solid $outer-focus-outline !important;
     }
   }
 
@@ -40,6 +42,9 @@
         0 1px 1px $focus-outline-color,
         0 0 0 0.2rem $focus-outline-color;
       outline: none;
+
+      // adds additional black internal border to tertiary buttons
+      border: 2px solid $focus-outline-color !important;
     }
   }
 
